--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -12,7 +12,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 body {
    background: #171717;
    background-image: linear-gradient(90deg, #141313 3px, transparent 0), linear-gradient(#141313 3px, transparent 0);
-   background-size: 150px 150px;
+   background-size: 200px 200px;
 }
 
 section {
@@ -34,8 +34,9 @@ section {
 .navigation-items button {
    font-size: 1.5rem;
    color: beige;
-   background-color: rgba(23, 23, 23, 0);
-   border: none;
+   background-color: rgba(20, 19, 19, 0);
+    border:none; 
+   box-shadow: 0px 0px 1px;
    border-radius: 3px;
    text-align: center;
    text-decoration: none;
@@ -96,22 +97,25 @@ section {
    color: beige;
 }
 
-.section-content span {
-   color: #551a8b;
+.colorize{
+   color: #a1e3d5;
    font-weight: 900;
    font-size: 2rem;
+}
+.colorize2{
+   color: #a1e3d5;
+   font-size: 1.5rem;
 }
 .section-content p {
    padding-top: 10px;
    font-size: 1rem;
 }
-
 .section-content h1 {
    font-size: 2rem;
 }
 
 .section-content h2 {
-   font-size: 2rem;
+   font-size: 1.5rem;
 }
 
 .section-item {
@@ -125,26 +129,8 @@ section {
 }
 
 .section-item:nth-child(1) {
-   margin: 130px 30% 5% 5%;
+   margin: 110px 30% 5% 10%;
    padding: 20px 30px 20px 30px;
-}
-
-.section-item:nth-child(2) {
-   margin: 0% 5% 5% 30%;
-   padding: 20px 30px 30px 30px;
-}
-
-.section-item:nth-child(3) {
-   margin: 0% 1% 3% 60%;
-   padding: 20px 30px 20px 30px;
-}
-
-.section-item:nth-child(4) {
-   margin: 0% 30% 10% 15%;
-   padding: 20px 25px 20px 30px;
-}
-
-.section-item:hover {
    background-color: #141313;
    box-shadow: 0px 0px 50px;
    border: none;
@@ -153,6 +139,52 @@ section {
    -ms-transform: scale(1.1);
    transform: scale(1.1);
 }
+
+.section-item:nth-child(2) {
+   margin: 0% 5% 5% 30%;
+   padding: 20px 30px 30px 30px;
+   background-color: #141313;
+   box-shadow: 0px 0px 50px;
+   border: none;
+   transition-duration: 0.75s;
+   -webkit-transform: scale(1.1);
+   -ms-transform: scale(1.1);
+   transform: scale(1.1);
+}
+
+.section-item:nth-child(3) {
+   margin: 0% 1% 3% 60%;
+   padding: 20px 30px 20px 30px;
+   background-color: #141313;
+   box-shadow: 0px 0px 50px;
+   border: none;
+   transition-duration: 0.75s;
+   -webkit-transform: scale(1.1);
+   -ms-transform: scale(1.1);
+   transform: scale(1.1);
+}
+
+.section-item:nth-child(4) {
+   margin: 0% 30% 10% 15%;
+   padding: 20px 25px 20px 30px;
+   background-color: #141313;
+   box-shadow: 0px 0px 50px;
+   border: none;
+   transition-duration: 0.75s;
+   -webkit-transform: scale(1.1);
+   -ms-transform: scale(1.1);
+   transform: scale(1.1);
+}
+
+/* .section-item:hover {
+   background-color: #141313;
+   box-shadow: 0px 0px 50px;
+   border: none;
+   transition-duration: 0.75s;
+   -webkit-transform: scale(1.1);
+   -ms-transform: scale(1.1);
+   transform: scale(1.1);
+} */
 
 .photo-section {
    display: flex;
