--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -10,9 +10,12 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 body {
-   background: #171717;
+   /* background: #171717;
    background-image: linear-gradient(90deg, #141313 3px, transparent 0), linear-gradient(#141313 3px, transparent 0);
-   background-size: 200px 200px;
+   background-size: 200px 200px; */
+   background-image: url("leaf.jpg");
+   background-image: repeating-linear-gradient(90deg, #141313 600px, transparent 0.5);
+   
 }
 
 section {
@@ -34,8 +37,8 @@ section {
 .navigation-items button {
    font-size: 1.5rem;
    color: beige;
-   background-color: rgba(20, 19, 19, 0);
-    border:none; 
+   background-color: rgba(32, 53, 34, 0.5);
+   border: none; 
    box-shadow: 0px 0px 1px;
    border-radius: 3px;
    text-align: center;
@@ -98,12 +101,12 @@ section {
 }
 
 .colorize{
-   color: #a1e3d5;
+   color: #203522;
    font-weight: 900;
    font-size: 2rem;
 }
 .colorize2{
-   color: #a1e3d5;
+   color: #203522;
    font-size: 1.5rem;
 }
 .section-content p {
