--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -47,7 +47,6 @@ section {
    display: inline-block;
    padding: 12px 23px 12px 23px;
    position: relative;
-   cursor: pointer;
 }
 
 .navigation-items button::after {
@@ -141,9 +140,9 @@ section h2 {
    box-shadow: 0px 0px 40px;
    border: none;
    transition-duration: 0.75s;
-   -webkit-transform: scale(1.1);
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
+   -webkit-transform: scale(110%);
+   -ms-transform: scale(110%);
+   transform: scale(110%);
 }
 
 .section-item:nth-child(2) {
@@ -153,9 +152,9 @@ section h2 {
    box-shadow: 0px 0px 40px;
    border: none;
    transition-duration: 0.75s;
-   -webkit-transform: scale(1.1);
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
+   -webkit-transform: scale(110%);
+   -ms-transform: scale(110%);
+   transform: scale(110%);
 }
 
 .section-item:nth-child(3) {
@@ -165,9 +164,9 @@ section h2 {
    box-shadow: 0px 0px 40px;
    border: none;
    transition-duration: 0.75s;
-   -webkit-transform: scale(1.1);
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
+   -webkit-transform: scale(110%);
+   -ms-transform: scale(110%);
+   transform: scale(110%);
 }
 
 .section-item:nth-child(4) {
@@ -177,9 +176,9 @@ section h2 {
    box-shadow: 0px 0px 40px;
    border: none;
    transition-duration: 0.75s;
-   -webkit-transform: scale(1.1);
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
+   -webkit-transform: scale(110%);
+   -ms-transform: scale(110%);
+   transform: scale(110%);
 }
 
 /* .section-item:hover {
@@ -211,6 +210,10 @@ section h2 {
    display: flex;
    justify-content: space-evenly;
 }
+.photo-third{
+   display: flex;
+   justify-content: space-evenly;
+}
 
 img.image1:nth-child(1) {
    margin: 0% 7% 0% 0%;
@@ -225,20 +228,25 @@ img.image1:nth-child(2) {
 }
 
 img.image2:nth-child(1) {
-   margin: 0% 5% 10% 12%;
+   margin: 0% 5% 5% 12%;
    height: 40%;
    width: 40%;
 }
 
 img.image2:nth-child(2) {
-   margin: 4% 5% 10% 12%;
+   margin: 4% 5% 0% 12%;
    height: 35%;
    width: 35%;
+}
+img.image3:nth-child(1){
+   margin: 0% 0% 10% 70%;
+   height: 80%;
+   width: 30%;
 }
 
 .photo img:hover {
    /* transition-duration: 0.4s; */
-   -webkit-transform: scale(1.1);
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
+   -webkit-transform: scale(110%);
+   -ms-transform: scale(110%);
+   transform: scale(110%);
 }
