--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -2,7 +2,8 @@ html, body {
    scroll-behavior: smooth;
    -ms-overflow-style: none;
    scrollbar-width: none;
-   font-family: 'Quicksand', sans-serif;
+   /* font-family: 'Quicksand', sans-serif; */
+   font-family: 'Chakra Petch', sans-serif;
 }
 
 html::-webkit-scrollbar, body::-webkit-scrollbar {
@@ -10,16 +11,41 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 body {
+   /* background-image: url("leaf.jpg");*/
    background: #171717;
    background-image: linear-gradient(90deg, #141313 3px, transparent 0), linear-gradient(#141313 3px, transparent 0);
-   background-size: 200px 200px;
-   /* background-image: url("leaf.jpg");
-   background-image: repeating-linear-gradient(90deg, #141313 600px, transparent 0.5); */
-
+   background-size: 210px 205px; 
+   position: relative;
+   z-index: -1;
 }
 
 section {
    margin: 0% 5% 0% 5%;
+}
+
+/*  .bordering {
+   position: relative;
+   border-left: 20px solid red;
+   z-index: 1;
+    margin: 120px 45% 0% 0%;
+} */
+
+
+section p, h1, h2 {
+   color: beige;
+}
+
+section p {
+   padding-top: 10px;
+   font-size: 1rem;
+}
+
+section h1 {
+   font-size: 2rem;
+}
+
+section h2 {
+   font-size: 1.5rem;
 }
 
 .navigation-menu {
@@ -95,10 +121,6 @@ section {
    box-shadow: 0px 0px 15px;
 }
 
-section p, h1, h2 {
-   color: beige;
-}
-
 .colorize {
    color: #2f4b32;
    font-weight: 900;
@@ -107,19 +129,6 @@ section p, h1, h2 {
 
 .colorize2 {
    color: #406643;
-   font-size: 1.5rem;
-}
-
-section p {
-   padding-top: 10px;
-   font-size: 1rem;
-}
-
-section h1 {
-   font-size: 2rem;
-}
-
-section h2 {
    font-size: 1.5rem;
 }
 
@@ -137,7 +146,7 @@ section h2 {
    margin: 110px 30% 5% 10%;
    padding: 20px 30px 20px 30px;
    background-color: #141313;
-   box-shadow: 0px 0px 40px;
+   box-shadow: 0px 0px 50px;
    border: none;
    transition-duration: 0.75s;
    -webkit-transform: scale(110%);
@@ -149,7 +158,7 @@ section h2 {
    margin: 0% 5% 5% 30%;
    padding: 20px 30px 30px 30px;
    background-color: #141313;
-   box-shadow: 0px 0px 40px;
+   box-shadow: 0px 0px 50px;
    border: none;
    transition-duration: 0.75s;
    -webkit-transform: scale(110%);
@@ -158,10 +167,10 @@ section h2 {
 }
 
 .section-item:nth-child(3) {
-   margin: 0% 1% 3% 60%;
+   margin: 0% 1% 3% 63%;
    padding: 20px 30px 20px 30px;
    background-color: #141313;
-   box-shadow: 0px 0px 40px;
+   box-shadow: 0px 0px 50px;
    border: none;
    transition-duration: 0.75s;
    -webkit-transform: scale(110%);
@@ -173,7 +182,7 @@ section h2 {
    margin: 0% 30% 0% 15%;
    padding: 20px 25px 20px 30px;
    background-color: #141313;
-   box-shadow: 0px 0px 40px;
+   box-shadow: 0px 0px 50px;
    border: none;
    transition-duration: 0.75s;
    -webkit-transform: scale(110%);
@@ -210,38 +219,40 @@ section h2 {
    display: flex;
    justify-content: space-evenly;
 }
-.photo-third{
+
+.photo-third {
    display: flex;
    justify-content: space-evenly;
 }
 
 img.image1:nth-child(1) {
-   margin: 0% 7% 0% 0%;
-   height: 35%;
-   width: 35%;
+   margin: 0% 0% 0% 0%;
+   height: 25%;
+   width: 25%;
 }
 
 img.image1:nth-child(2) {
-   margin: 8% 0% 4% 7%;
-   height: 20%;
-   width: 20%;
+   margin: 8% 10% 4% 0%;
+   height: 15%;
+   width: 15%;
 }
 
 img.image2:nth-child(1) {
-   margin: 0% 5% 5% 12%;
-   height: 40%;
-   width: 40%;
+   margin: 0% 5% 5% 10%;
+   height: 25%;
+   width: 25%;
 }
 
 img.image2:nth-child(2) {
    margin: 4% 5% 0% 12%;
-   height: 35%;
-   width: 35%;
+   height: 25%;
+   width: 25%;
 }
-img.image3:nth-child(1){
-   margin: 0% 0% 10% 70%;
-   height: 80%;
-   width: 30%;
+
+img.image3:nth-child(1) {
+   margin: 0% 0% 10% 55%;
+   height: 70%;
+   width: 20%;
 }
 
 .photo img:hover {
