--- a/individual-work/pololetni-prace/style.css
+++ b/individual-work/pololetni-prace/style.css
@@ -19,7 +19,6 @@ body {
 
 section {
    margin: 0% 5% 0% 5%;
-
 }
 
 section p, h1, h2 {
@@ -44,14 +43,12 @@ section h2 {
    align-items: center;
    justify-content: space-evenly;
    margin: 0% 34% 1% 34%;
-
+   z-index: 2;
 }
 
 .navigation-items {
    background-color: rgba(23, 23, 23, 0);
    margin-top: 2.5vh;
-   /* position: fixed;
-   z-index: 2; */
 }
 
 .navigation-items button {
@@ -68,6 +65,8 @@ section h2 {
    padding: 12px 23px 12px 23px;
    position: relative;
    cursor: pointer;
+/*    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+ */    
 }
 
 .navigation-items button::after {
@@ -112,14 +111,15 @@ section h2 {
    /* jak daleko co pojede */
    height: 115%;
    box-shadow: 0px 0px 15px;
-   cursor: pointer;
+   cursor: pointer; 
 }
 
-.navigation-items button:hover:after {
+.navigation-items button:hover::after {
    width: 110%;
    height: 115%;
    box-shadow: 0px 0px 15px;
    cursor: pointer;
+   
 }
 
 .colorize {
@@ -209,7 +209,7 @@ section h2 {
    border-radius: 10px;
    box-shadow: 0px 0px 15px beige;
    transition-duration: 0.4s;
-} 
+}
 
 /* .photo-first {
    display: grid;
@@ -232,9 +232,10 @@ section h2 {
 }
 
 .photo-third {
-   display: flex;
+   display: inline;
    justify-content: space-evenly;
 }
+
 /* 
 row ⇨⇨⇨ 
 column ⇩⇩⇩ 
@@ -273,13 +274,13 @@ column ⇩⇩⇩
    grid-row-start: 3; 
 }*/
 img.image1:nth-child(1) {
-   margin: 0% 10% 0% 0%;
+   margin: 0% 5% 0% 0%;
    height: 35%;
    width: 35%;
 }
 
 img.image1:nth-child(2) {
-   margin: 8% 10% 4% 5%;
+   margin: 8% 10% 4% 0%;
    height: 20%;
    width: 20%;
 }
@@ -297,10 +298,15 @@ img.image2:nth-child(2) {
 }
 
 img.image3:nth-child(1) {
-   margin: 0% 55% 10% 0%;
+   margin: 0% 0% 10% 0%;
    height: 75%;
    width: 25%;
-} 
+}
+img.image3:nth-child(2){
+   margin: 0% 0% 0% 50%;
+   height: 55%;
+   width: 35%;
+}
 
 /* img.image3:nth-child(2) {
    margin: 0% 0% 10% 0%;
