--- a/individual-work/pololetni-prace/style.css
+++ b/individual-work/pololetni-prace/style.css
@@ -65,8 +65,8 @@ section h2 {
    padding: 12px 23px 12px 23px;
    position: relative;
    cursor: pointer;
-/*    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
- */    
+   /*    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+ */
 }
 
 .navigation-items button::after {
@@ -111,7 +111,7 @@ section h2 {
    /* jak daleko co pojede */
    height: 115%;
    box-shadow: 0px 0px 15px;
-   cursor: pointer; 
+   cursor: pointer;
 }
 
 .navigation-items button:hover::after {
@@ -119,7 +119,7 @@ section h2 {
    height: 115%;
    box-shadow: 0px 0px 15px;
    cursor: pointer;
-   
+
 }
 
 .colorize {
@@ -136,8 +136,6 @@ section h2 {
 .section-item {
    display: inline-block;
    transition: 0.9s;
-   /* border: #07253d 1px solid; */
-   /*  box-shadow: 0px 0px 7px #07253d; */
    box-shadow: 0px 0px 5px beige;
    border-radius: 15px;
    background-color: #171717;
@@ -212,12 +210,13 @@ section h2 {
 }
 
 /* .photo-first {
+   
    display: grid;
    grid-template-columns: repeat(2);
    grid-template-rows: repeat(3);
-   /* gap: 10%; */
-/* grid-auto-rows: minmax(100px, auto); */
-/* grid-auto-flow: row;  
+    gap: 10%; 
+grid-auto-rows: minmax(100px, auto); 
+grid-auto-flow: row;  
    grid-template-columns: 50% 50%;
    grid-template-rows: 25% 25%;
 } */
@@ -302,17 +301,12 @@ img.image3:nth-child(1) {
    height: 75%;
    width: 25%;
 }
-img.image3:nth-child(2){
+
+img.image3:nth-child(2) {
    margin: 0% 0% 0% 50%;
    height: 55%;
    width: 35%;
 }
-
-/* img.image3:nth-child(2) {
-   margin: 0% 0% 10% 0%;
-   height: 70%;
-   width: 20%;
-}  */
 
 .photo img:hover {
    -webkit-transform: scale(1.2);
