--- a/individual-work/pololetni-prace/style.css
+++ b/individual-work/pololetni-prace/style.css
@@ -43,7 +43,6 @@ section h2 {
    align-items: center;
    justify-content: space-evenly;
    margin: 0% 34% 1% 34%;
-   z-index: 2;
 }
 
 .navigation-items {
@@ -65,8 +64,8 @@ section h2 {
    padding: 12px 23px 12px 23px;
    position: relative;
    cursor: pointer;
-   /*    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
- */
+   z-index: 2;
+   /*text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;*/
 }
 
 .navigation-items button::after {
