--- a/individual-work/second-website/style.css
+++ b/individual-work/second-website/style.css
@@ -5,35 +5,37 @@
 }
 
 body {
-    margin: 5%;
+    
     /* background: #171717; */
     background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)3px, transparent 0), linear-gradient(rgba(155, 153, 153, 0.3) 3px, transparent 0);
     background-size: 400px 400px;
 }
 
 .home-main {
+    background-color: #9569b9;   
+    margin: 10%;
+}
+.home-sub-main{
     display: flex;
     justify-content: space-between;
-    margin-right: 2vw;
-    margin-bottom: 7vh;
-    margin-left: 50vw;
+    background-color: rgba(0, 0, 0, 0);
 }
 
-.home-main-item button {
+.home-sub-main-item button {
+    
     text-decoration: none;
-    font-size: 2rem;
     border: rgba(0, 0, 0, 0.5) 2px solid;
     border-radius: 10px;
-    width: 10vw;
-    height: 7vh;
-    font-size: 2rem;
+    width: auto;
+    height: auto;
+    font-size: 1rem;
     background-color: rgba(0, 0, 0, 0);
     cursor: pointer;
     transition-duration: 0.5s;
     opacity: 0.7;
 }
 
-.home-main-item button:hover {
+.home-sub-main-item button:hover {
     transform: scale(1.1);
     transition-duration: 0.5s;
     background-color: #9569b9;
@@ -51,13 +53,12 @@ body {
     border: rgb(207, 207, 207) 1px solid;
     border-radius: 10px;
     background-color: rgb(207, 207, 207, 0.7);
-    width: 80vw;
-    height: 65vh;
+    width: auto;
+    height: auto;
     display: flex;
-    padding: 15px;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 
