--- a/individual-work/second-website/style.css
+++ b/individual-work/second-website/style.css
@@ -15,70 +15,161 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 body {
-    /* background: #171717; */
-    background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)1px, transparent 0), linear-gradient(rgba(155, 153, 153, 0.3) 1px, transparent 0);
-    background-size: 10px 10px;
+    background-color: #ffffff;
+    /* background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)1px, transparent 0), linear-gradient(rgba(155, 153, 153, 0.3) 1px, transparent 0);
+    background-size: 10px 10px; */
 }
 
 .home-main {
-    justify-content: left;
+    background-color: rgb(250, 248, 246);
     display: flex;
-    /* padding-top: 1vh;
-    padding-right: 10vw;
-    padding-bottom: 1vh;
-    padding-left: 10vw; */
+    justify-content: right;
+    /* x */
 }
-.home-main-photo{
-    border: aqua 2px solid;
+
+.home-main-photo {
+    width: 10vw;
+    height: 10vh;
     scale: 0.3;
+
 }
 
 .home-sub-main {
-    padding: 1%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    /* margin-left: 75vw;*/
+    margin-left: 1.5vw;
+    padding: 1%;
     background-color: rgba(0, 0, 0, 0);
-    border: rgb(240, 216, 1) 2px solid;
-
 }
 
-.home-main-item button {
+.home-sub-main button {
     text-decoration: none;
-    border: rgba(0, 0, 0, 0) 2px solid;
-    border-radius: 10px;
-    padding: auto;
+    font-size: 1.3rem;
+    margin: 2%;
+    margin-right: 1.5vw;
+    padding-top: .5vh;
+    padding-right: .9vh;
+    padding-bottom: .5vh;
+    padding-left: .9vh;
     width: auto;
     height: auto;
-    background-color: rgba(255, 255, 255, 1);
     cursor: pointer;
+    position: relative;
     transition-duration: 0.5s;
     opacity: 0.7;
+    text-align: center;
+    display: inline-flex;
+    background-color: rgba(0, 0, 0, 0);
+    border: rgba(0, 0, 0, 0);
+    box-shadow: rgba(0, 0, 0, 0);
 }
 
-.home-main-item button:hover {
-    transform: scale(1.1);
-    transition-duration: 0.5s;
-    background-color: #9569b9;
-    border: #9569b9 1px solid;
-    opacity: 1;
-    box-shadow: 0px 0px 15px #9569b9;
+/* .navigation-items button {
+    border: none;
+    box-shadow: 0px 0px 10px rgba(32, 53, 34, 1);
+    border-radius: 3px;
+    padding: 12px 23px 12px 23px;
+ } */
+
+.home-sub-main button::after {
+    content: "";
+    /* musí zde být, aby byl následující obsah */
+    width: 11px;
+    /* velikost borderu horního před hoverem */
+    height: 11px;
+    position: absolute;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.home-sub-main button::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    position: absolute;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.home-sub-main button::after {
+    top: -1px;
+    /* umístění mini-borderu před hoverem vůči elementu */
+    left: -1px;
+    border-top: rgb(0, 0, 0) 4px solid;
+    border-left: rgb(0, 0, 0) 4px solid;
+    cursor: pointer;
+}
+
+.home-sub-main button::before {
+    bottom: -1px;
+    right: -1px;
+    border-bottom: rgb(0, 0, 0) 4px solid;
+    border-right: rgb(0, 0, 0) 4px solid;
+    cursor: pointer;
+}
+
+.home-sub-main button:hover::before {
+    width: 110%;
+    /* jak daleko co pojede */
+    height: 115%;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 1); 
+    cursor: pointer;
+}
+
+.home-sub-main button:hover::after {
+    width: 110%;
+    height: 115%;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
+    cursor: pointer;
+}
+
+[class^="box-"] {
+    display: grid;
+    
 }
 
 .section-main {
-    display: flex;
-    justify-content: center;
-    z-index: 0;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    display: grid;
+    height: auto;
+    /* gap: 5%;
+    place-self: stretch/center;
+    grid-template: 1fr 1fr/ 1fr 1fr 1fr;
+    gap: 5% 15%; */
+    /* grid-template-columns: 400px 400px;
+    grid-template-rows: 400px 400px;
+    justify-content: space-around;
+    align-items: space-around; */
+    
+    grid-template-areas:
+        "A A A A  A A A A  B B B B  C C C C"
+        "D D D D  D D D D  B B B B  E E E E"
+        "F F F F  G G G G  H H H H  I I I I"; 
 }
 
-.section-sub-item:nth-child(1) {
+.box-1 {grid-area: A;}
+.box-2 { grid-area: B;}
+.box-3 {grid-area: C;}
+.box-4 {grid-area: D}
+.box-5{grid-area:E}
+.box-6{grid-area:F}
+.box-7{grid-area:G}
+.box-8{grid-area: H}
+.box-9{grid-area: I} 
+.section-main img {   
+    width: 1fr;
+    height: 1fr;
+}
+
+/* .section-sub-item:nth-child(1) {
     border: rgb(207, 207, 207, 0) 1px solid;
     border-radius: 10px;
     width: auto;
     height: auto;
     margin: 5%;
-    display: block;
-    justify-content: center;
-    align-items: center;
+    ;
     font-size: 1rem;
 }
 
@@ -117,29 +208,27 @@ body {
     align-items: center;
     font-size: 1rem;
 }
-
-.section-main img {
+ */
+/* .section-main img {
     padding: 1%;
     border-radius: 10px;
-}
+} */
 
 .footer-main {
-    background-color: #9569b9;
-    top: 0;
-    z-index: 9;
+    opacity: 0.7;
+    background-color: rgb(250, 248, 246);
     display: flex;
+    position: relative;
     justify-content: center;
-    padding-top: 3vh;
+    padding-top: 1vh;
     padding-right: 10vw;
-    padding-bottom: 3vh;
+    padding-bottom: 1vh;
     padding-left: 10vw;
 }
 
-.footer-main-item {
-    border: rgb(240, 216, 1) 2px solid;    
-}
+.footer-main-item {}
 
-
+/* 
 
 @media only screen and (max-width: 160px) {
     .home-main {
@@ -183,7 +272,7 @@ body {
         padding-right: 15vw;
         padding-bottom: 1vh;
         padding-left: 0vw; */
-    }
+/*    }
 
     .footer-main-item {
         font-size: 1rem;
@@ -226,4 +315,4 @@ body {
         font-size: 1.3rem;
     }
 
-}
+} */
