--- a/individual-work/second-website/gallery.css
+++ b/individual-work/second-website/gallery.css
@@ -191,10 +191,11 @@ body {
     gap: 2% 2%;
     grid-template-areas:
         "A A A A  B B B B"
-        "C C C C  C C C C"
+        "D D D D  C C C C"
         "D D D D  E E E E"
         "G G G G  H H H H"
-        "I I I I  J J J J";
+        "I I I I  J J J J"
+        "F F F F  F F F F";
 }
 
 .box-1 {
@@ -207,21 +208,6 @@ body {
 
 .box-3 {
     grid-area: C;
-    width: 60vw;
-    justify-content: center;
-    padding: 2vh 3vw 2vh 3vw;
-    border: 1px solid rgba(0, 0, 0, 0);
-    box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-}
-
-.box-3 span {
-    font-size: 1.1rem;
-    font-weight: 600;
-    display: flex;
-    justify-content: left;
-    padding-left: 2vw;
-    padding-bottom: 1vh;
 }
 
 .box-4 {
