--- a/individual-work/second-website/gallery.css
+++ b/individual-work/second-website/gallery.css
@@ -14,6 +14,8 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 body {
     background-color: #ffffff;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.3) 1px, transparent 0);
+    background-size: 100px 300px; 
 }
 
 .nav-bar-main {
@@ -162,6 +164,14 @@ body {
     width: auto;
     height: auto;
     box-shadow: 0px 10px 25px 0px rgb(121, 119, 119, 0.7);
+    transition-duration: .3s;
+    cursor: context-menu;
+}
+.content-sub-main img:hover{
+    box-shadow: 0px 0px 45px 10px rgb(121, 119, 119, 0.5);
+    transition-duration: .3;
+    transform: scale(115%);
+    cursor: context-menu;
 }
 
 .content-sub-main {
@@ -171,6 +181,7 @@ body {
     align-items: center;
     justify-items: center;
     gap: 2% 2%;
+    cursor: context-menu;
     grid-template-areas:
         "A A A A  B B B B"
         "C C C C  D D D D"
