--- a/individual-work/second-website/style.css
+++ b/individual-work/second-website/style.css
@@ -213,6 +213,7 @@ body {
     border: 1px solid rgba(0, 0, 0, 0);
     box-shadow: 0px 25px 30px -5px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
+    font-size: 0.9vw;
 }
 
 .box-3 span {
@@ -256,7 +257,7 @@ body {
     z-index: 1;
     background-color: rgba(199, 194, 188, 0.205);
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 0.7vw;;
     display: flex;
     justify-content: center;
     position: relative;
