--- a/individual-work/second-website/about.css
+++ b/individual-work/second-website/about.css
@@ -14,8 +14,8 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 body {
     background-color: #ffffff;
-    /* background-image:linear-gradient(rgba(0, 0, 0, 0.3) 1px, transparent 0);
-    background-size: 100px 300px;  */
+    /* background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)1px, transparent 0), linear-gradient(rgba(155, 153, 153, 0.3) 1px, transparent 0);
+    background-size: 150px 150px;  */
 }
 
 .nav-bar-main {
@@ -145,6 +145,7 @@ body {
 .nav-bar-sub-main button:hover {
     /* transform: scale(110%); */
     box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+    /* letter-spacing: 0.05vw; */
 }
 
 /* [class^="box-"] {
@@ -152,7 +153,7 @@ body {
 } */
 .content-main {
     position: relative;
-    margin: 10vh 5vw 30vh 5vw;
+    margin: 10vh 0vw auto 0vw;
     height: auto;
     z-index: 1;
 }
@@ -160,77 +161,53 @@ body {
 .content-sub-main img {
     border-radius: 2px;
     border-radius: none;
-    scale: .85;
-    max-width: 100%;
-    max-height: auto;
+    width: auto;
+    height: auto;
     box-shadow: 0px 10px 25px 0px rgb(121, 119, 119, 0.7);
-    transition-duration: .3s;
-    cursor: context-menu;
-}
-
-.content-sub-main img:hover {
-    box-shadow: 0px 0px 45px 10px rgb(121, 119, 119, 0.5);
-    transition-duration: .3;
-    transform: scale(115%);
-    cursor: context-menu;
 }
 
 .content-sub-main {
-    margin-top: 4vh;
-    margin-bottom: 10vh;
+    margin-top: 10vh;
+    margin-right: 10vw;
+    margin-bottom: 5vh;
+    margin-left: 10vw;
     display: grid;
     align-items: center;
     justify-items: center;
-    gap: 2% 2%;
-    cursor: context-menu;
+    gap: 0% 0%;
+    /* 
+    grid-template-columns: repeat(2,1fr);    
+    grid-template-rows: repeat(2, 1fr); */
     grid-template-areas:
         "A A A A  B B B B"
-        "C C C C  D D D D"
-        "E E E E  F F F F"
-        "G G G G  H H H H"
-        "I I I I  J J J J"
-        "K K K K  L L L L";
+        "C C C C  D D D D";
 }
 
 .box-1 {
-    grid-area: A;
 }
 
+
 .box-2 {
-    grid-area: B;
+
 }
 
 .box-3 {
-    grid-area: C;
 }
 
 .box-4 {
-    grid-area: D
 }
 
-.box-5 {
-    grid-area: E
-}
+.box-5 {}
 
-.box-6 {
-    grid-area: F
-}
+.box-6 {}
 
-.box-7 {
-    grid-area: G
-}
+.box-7 {}
 
-.box-8 {
-    grid-area: H
-}
+.box-8 {}
 
-.box-9 {
-    grid-area: I
-}
+.box-9 {}
 
-.box-10 {
-    grid-area: J;
-}
+.box-10 {}
 
 .footer-main {
     z-index: 1;
