--- a/individual-work/second-website/stories-extras.css
+++ b/individual-work/second-website/stories-extras.css
@@ -14,8 +14,8 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 body {
     background-color: #ffffff;
-    /* background-image:linear-gradient(rgba(0, 0, 0, 0.3) 1px, transparent 0);
-    background-size: 100px 300px;  */
+    /* background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)1px, transparent 0), linear-gradient(rgba(155, 153, 153, 0.3) 1px, transparent 0);
+    background-size: 150px 150px;  */
 }
 
 .nav-bar-main {
@@ -145,6 +145,7 @@ body {
 .nav-bar-sub-main button:hover {
     /* transform: scale(110%); */
     box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+    /* letter-spacing: 0.05vw; */
 }
 
 /* [class^="box-"] {
@@ -152,85 +153,135 @@ body {
 } */
 .content-main {
     position: relative;
-    margin: 10vh 5vw 30vh 5vw;
+    margin: 10vh 0vw auto 0vw;
     height: auto;
     z-index: 1;
 }
 
 .content-sub-main img {
+    
     border-radius: 2px;
-    border-radius: none;
-    scale: .85;
-    max-width: 100%;
-    max-height: auto;
     box-shadow: 0px 10px 25px 0px rgb(121, 119, 119, 0.7);
-    transition-duration: .3s;
-    cursor: context-menu;
-}
-
-.content-sub-main img:hover {
-    box-shadow: 0px 0px 45px 10px rgb(121, 119, 119, 0.5);
-    transition-duration: .3;
-    transform: scale(115%);
-    cursor: context-menu;
 }
 
 .content-sub-main {
-    margin-top: 4vh;
-    margin-bottom: 10vh;
+    margin-top: 10vh;
+    margin-right: 10vw;
+    margin-bottom: 5vh;
+    margin-left: 10vw;
     display: grid;
-    align-items: center;
+    gap: 5vh 10vw;
     justify-items: center;
-    gap: 2% 2%;
-    cursor: context-menu;
-    grid-template-areas:
-        "A A A A  B B B B"
-        "C C C C  D D D D"
-        "E E E E  F F F F"
-        "G G G G  H H H H"
-        "I I I I  J J J J"
-        "K K K K  L L L L";
+    align-items: center;
+    grid-template-areas: 
+    "FOTO1  FOTO2"
+    "FOTO3  FOTO4";    
 }
 
 .box-1 {
-    grid-area: A;
+    grid-area: FOTO1;
+}
+.box-1 img{
+   scale: .7;
+}
+.box-1-main {
+    max-width: 500px;
+    height: 500px;
+    margin-left: 5vw;
+    background-color: transparent;
+    perspective: 1000px;
 }
 
-.box-2 {
-    grid-area: B;
+.box-1-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    text-align: center;
+    transition: 1s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.box-3 {
-    grid-area: C;
+.box-1:hover .box-1-inner {
+    transform: rotateY(180deg)
 }
 
-.box-4 {
-    grid-area: D
+.box-1-front, .box-1-back {
+    position: absolute;
+    width: 100%;
+    min-height: 100%;
+    backface-visibility: hidden;
 }
 
-.box-5 {
-    grid-area: E
+.box-1-front {
+    background-color: #bbb;
+    color: black;
 }
 
-.box-6 {
-    grid-area: F
+.box-1-back {
+    background-color: #2980b9;
+    color: black;
+    padding: 10%;
+    transform: rotateY(180deg);    
+    border-radius: 2px;
 }
 
-.box-7 {
-    grid-area: G
+.box-2{
+    grid-area: FOTO2;
+}
+.box-2-main{
+    width: 600px;
+    height: auto;
+    background-color: transparent;
+    perspective: 1000px;
+}
+.box-2-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    text-align: center;
+    transition: 1s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.box-8 {
-    grid-area: H
+.box-2:hover .box-2-inner {
+    transform: rotateY(180deg)
 }
 
-.box-9 {
-    grid-area: I
+.box-2-front, .box-2-back {
+    position: absolute;
+    width: 100%;
+    min-height: 100%;
+    backface-visibility: hidden;
 }
 
-.box-10 {
-    grid-area: J;
+.box-2-front {
+    background-color: #bbb;
+    color: black;
 }
+
+.box-2-back {
+    background-color: #2980b9;
+    color: white;
+    padding: 10%;
+    transform: rotateY(180deg);
+    border-radius: 2px;;
+} 
+
+.box-4 {}
+
+.box-5 {}
+
+.box-6 {}
+
+.box-7 {}
+
+.box-8 {}
+
+.box-9 {}
+
+.box-10 {}
 
 .footer-main {
     z-index: 1;
